Review fix: thread-safe WALRecordsFactory, recovery dispatch tests, D7 mixed-mode test
Track-level code review fixes:
- SF2: Replace Int2ObjectOpenHashMap with ConcurrentHashMap in
  WALRecordsFactory.idToTypeMap for thread safety during concurrent
  storage initialization. Fix double hash lookup in walRecordById.
  Remove unnecessary synchronized from PageOperationRegistry.registerAll().
- SF4: Fix misleading initialLsn CAS comment in recovery dispatch —
  the check fires for every PageOperation, not just the first per page.
- SF1: Add RestoreAtomicUnitPageOperationTest with 4 tests covering
  redo + LSN update, LSN idempotency skip, non-durable file skip,
  and deleted file restore.
- SF3: Add mixed-mode D7 transition test verifying converted page
  (changeLSN set by flush) skips UpdatePageRecord while unconverted
  page still produces UpdatePageRecord in the same atomic unit.